Fix overly permissive CORS configuration